# app/Http/Resources/CardResource.php
@@ -31,4 +31,21 @@ class CardResource extends JsonResource
             'created_at' => $this->created_at->format('Y-m-d'),
         ];
     }
+
+    /**
+     * @OA\Schema(
+     * @OA\Xml(name="Card"),
+     *       schema="Card",
+     *       @OA\Property(property="name", type="string", example="dito"),
+     *       @OA\Property(property="health_points", type="integer", example="50"),
+     *       @OA\Property(property="is_first_edition", type="boolean", example="true"),
+     *       @OA\Property(property="is_taken", type="boolean", example="true"),
+     *       @OA\Property(property="expansion_set", type="integer", example="1"),
+     *       @OA\Property(property="pokemon_type", type="array", @OA\Items(type="string", example="Fire"),),
+     *       @OA\Property(property="card_rarity", type="integer", example="1"),
+     *       @OA\Property(property="price", type="number", example="10.50"),
+     *       @OA\Property(property="image_url", type="url", format="url", example="www.pokeimage.com/01"),
+     *       @OA\Property(property="created_at", type="date", example="2021-11-29"),
+     * )
+     */
 }
